// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - default - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "default",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.disabled: true - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": true,
      "hideOnSinglePage": undefined,
      "id": "properties.disabled: true",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.hideOnSinglePage: true, total: 1 - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.hideOnSinglePage: true, total: 1 - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": true,
      "id": "properties.hideOnSinglePage: true, total: 1",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 1,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.hideOnSinglePage: true, total: 100 - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.hideOnSinglePage: true, total: 100 - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": true,
      "id": "properties.hideOnSinglePage: true, total: 100",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pageSizeOptions: [100, 200, 500] - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.pageSizeOptions: [100, 200, 500] - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.pageSizeOptions: [100, 200, 500]",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 100,
      "pageSizeOptions": Array [
        100,
        200,
        500,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 6000,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showQuickJumper: true - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.showQuickJumper: true - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.showQuickJumper: true",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": true,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showSizeChanger: false - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.showSizeChanger: false - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.showSizeChanger: false",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": false,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showTotal: 'This is the total' - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.showTotal: 'This is the total' - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.showTotal: 'This is the total'",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showTotal: true - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.showTotal: true - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.showTotal: true",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.simple: true - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.simple: true - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.simple: true",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": true,
      "size": undefined,
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: default - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.size: default - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.size: default",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": "default",
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.size: small - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.size: small",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": "small",
      "total": 100,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.total - value[0] - Pagination 1`] = `mocked`;

exports[`Mock render - properties.total - value[0] - Pagination 2`] = `
Array [
  Array [
    Object {
      "current": 1,
      "disabled": undefined,
      "hideOnSinglePage": undefined,
      "id": "properties.total",
      "onChange": [Function],
      "onShowSizeChange": [Function],
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        20,
        30,
        40,
      ],
      "showQuickJumper": undefined,
      "showSizeChanger": undefined,
      "showTotal": [Function],
      "simple": false,
      "size": undefined,
      "total": 500,
    },
    Object {},
  ],
]
`;
